--- a/map.html
+++ b/map.html
@@ -15,22 +15,34 @@
     <div class = 'header-contianer'>
       <header class = 'header_sw' >
         <h1 id = 'text-white'>Smart Loading Zones: Predict Demand</h1>
+        <a href=".\map.html" class = 'tab-button'>
+          <button class="head-animated-button">
+            <span>Home</span>
+            <span></span>
+          </button>
 
-        <button class="head-animated-button">
-          <span>Home</span>
-          <span></span>
-        </button>
-        <button class="head-animated-button">
-          <span>Tool</span>
-          <span></span>
-        </button>
-        <button class="head-animated-button">
-          <span>Resource</span>
-          <span></span>
-        <button class="head-right-animated-button">
-          <span>Login</span>
-          <span></span>
-        </button>
+        </a>
+        <a href=".\index.html" class = 'tab-button'>
+          <button class="head-animated-button">
+            <span>Tool</span>
+            <span></span>
+          </button>
+
+        </a>
+        <a href=".\map.html" class = 'tab-button'>
+          <button class="head-animated-button">
+            <span>Resource</span>
+            <span></span>
+          </button>
+        </a>
+
+        <a href=".\map.html" class = 'tab-button'>
+          <button class="head-right-animated-button">
+            <span>Login</span>
+            <span></span>
+          </button>
+        </a>
+
 
   
       </header>
