--- a/index.html
+++ b/index.html
@@ -16,21 +16,33 @@
       <header class = 'header_sw' >
         <h1 id = 'text-white'>Smart Loading Zones: Predict Demand</h1>
 
-        <a href=".\map.html" class="head-animated-button">
-          <span>Home</span>
-          <span></span>
+        <a href=".\map.html" class = 'tab-button'>
+          <button class="head-animated-button">
+            <span>Home</span>
+            <span></span>
+          </button>
+
         </a>
-        <button class="head-animated-button">
-          <span>Tool</span>
-          <span></span>
-        </button>
-        <button class="head-animated-button">
-          <span>Resource</span>
-          <span></span>
-        <button class="head-right-animated-button">
-          <span>Login</span>
-          <span></span>
-        </button>
+        <a href=".\index.html" class = 'tab-button'>
+          <button class="head-animated-button">
+            <span>Tool</span>
+            <span></span>
+          </button>
+
+        </a>
+        <a href=".\map.html" class = 'tab-button'>
+          <button class="head-animated-button">
+            <span>Resource</span>
+            <span></span>
+          </button>
+        </a>
+
+        <a href=".\map.html" class = 'tab-button'>
+          <button class="head-right-animated-button">
+            <span>Login</span>
+            <span></span>
+          </button>
+        </a>
 
   
       </header>
