--- a/index.html
+++ b/index.html
@@ -65,14 +65,21 @@
       </div>
         <br> 
         <h2 style="margin-left: 5%">Select Street</h2>
-        <select id="stateDropdown">
+        <select id="on-select">
           <option>Select a Street</option>
         </select>
         <br> 
-        <h2 style="margin-left: 5%">Select time of a day</h2>
-        <select id="stateDropdown">
-          <option>Select time of a day</option>
+        <h2 style="margin-left: 5%">Select Starting Street</h2>
+        <select id="start-select">
+          <option>Select Starting Street</option>
         </select>
+        <br>
+        <h2 style="margin-left: 5%">Select Ending Street</h2>
+        <select id="end-select">
+          <option>Select Ending Street</option>
+        </select>
+        <br>
+
         <br>
         <input type="text" id="country-name-filter" placeholder="Search by street name..."style="display: none;">
         <br>
