--- a/index.html
+++ b/index.html
@@ -64,20 +64,23 @@
           </p>
       </div>
         <br> 
-        <h2 style="margin-left: 5%">Select Street</h2>
-        <select id="on-select">
-          <option>Select a Street</option>
-        </select>
-        <br> 
-        <h2 style="margin-left: 5%">Select Starting Street</h2>
-        <select id="start-select">
-          <option>Select Starting Street</option>
-        </select>
-        <br>
-        <h2 style="margin-left: 5%">Select Ending Street</h2>
-        <select id="end-select">
-          <option>Select Ending Street</option>
-        </select>
+        <div class="selectorContainer">
+          <h2 class="headingText">Select Street</h2>
+          <select class="select" id="on-select">
+            <option>Select a Street</option>
+          </select>
+          <br> 
+          <h2 class="headingText">Select Starting Street</h2>
+          <select class="select" id="start-select">
+            <option>Select Starting Street</option>
+          </select>
+          <br>
+          <h2 class="headingText">Select Ending Street</h2>
+          <select class="select" id="end-select">
+            <option>Select Ending Street</option>
+          </select>
+          <button id="clear-selection">Clear Selection</button>
+        </div>
         <br>
 
         <br>
