--- a/map.html
+++ b/map.html
@@ -36,12 +36,27 @@
           </button>
         </a>
 
-        <a href=".\map.html" class = 'tab-button'>
+        <a href="#" class="tab-button" id="loginButton">
           <button class="head-right-animated-button">
             <span>Login</span>
             <span></span>
           </button>
         </a>
+        
+        <!-- Modal for Login -->
+        <div id="loginModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <form action="/submit-your-login-form" method="post">
+              <label for="username">Username:</label>
+              <input type="text" id="username" name="username" required><br><br>
+              <label for="password">Password:</label>
+              <input type="password" id="password" name="password" required><br><br>
+              <button type="submit">Login</button>
+            </form>
+          </div>
+        </div>
+
 
 
   
