--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <canvas id="myChart"></canvas>
         </div>
         </div>
-        <div id="chartContainer" style="height: 43vh; width: 50%;overflow: hidden;position: absolute;right: 0px"></div>
+        <div id="chartContainer" style="height: 40%; width: 40%;overflow: hidden;position: absolute;right: 0px"></div>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
